# -HeadFirstDesignPatterns

./: README.md
Observer/: CMakeLists.txt  main.cpp
Observer/inc/: CurrentConditionsDisplay.hpp  ForecastDisplay.hpp  IDisplayElement.hpp  IObserver.hpp  ISubject.hpp  WeatherData.hpp
Observer/src/: CurrentConditionsDisplay.cpp  ForecastDisplay.cpp  WeatherData.cpp
Strategy/: CMakeLists.txt  main.cpp
Strategy/inc/: Duck.hpp  FlyNoWay.hpp  FlyWithWings.hpp  IFlyBehavior.hpp  IQuackBehavior.hpp  MallardDuck.hpp  MuteQuack.hpp  Quack.hpp  Squeak.hpp
Strategy/src/: Duck.cpp  FlyNoWay.cpp  FlyWithWings.cpp  MallardDuck.cpp  MuteQuack.cpp  Quack.cpp  Squeak.cpp
